--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 .navbar{
     background: #FFFFFF;
@@ -19,8 +23,9 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo{
-    font-weight: bold;
+.navbar .nav-wrapper .logo{
+    /* font-weight: bold; */
+    height: 32px;
 }
 .nav-menu{
     display: flex;
@@ -29,6 +34,7 @@
 .nav-menu a{
     text-decoration: none;
     color: #000000;
+    font-weight: 500;
 }
 
 .nav-menu a:hover {color: #2f855a; 
@@ -36,20 +42,28 @@
 
 
 .banner{
-    background-image: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url(../assets/hero-bg.png);
+     background-image:   linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+  url(../assets/hero-bg.png)
+  background-size: cover;
     background-size: cover;
     background-position: center;
     padding: 120px 20px;
     text-align: center;
     color: #FFFFFF;
 }
+.banner .banner-content{
+  max-width: 800px;
+  margin: 0 auto;
+}
 .banner h1{
     font-size: 42px;
     margin: 20px 0;
 }
 .banner p{
-    max-width: 750px;
-    margin: auto;
+    /* max-width: 750px; */
+    /* margin: auto; */
+    font-size: 16px;
+  line-height: 1.6;
 }
 .badge{
    background: #30B868;
@@ -57,6 +71,7 @@
    border-radius: 1000px;
    font-size: 14px;
    font-style: medium;
+   font-weight: 500;
    letter-spacing: 0%;
 }
 .banner-buttons {
@@ -65,4 +80,56 @@
   justify-content: center;
   gap: 15px;
 }
+.notes{
+    padding: 120px 20px;
+     text-align: center; 
+     
+}
+.notes h2{
+  font-size: 32px;
+  margin-bottom: 12px;
+}
 
+.subtitle{
+  color: #6b7280;
+  max-width: 700px;
+  margin: 0 auto 60px;
+}
+.notes .card-row{
+    display: flex;
+     gap: 24px; 
+    justify-content: space-between;
+}
+ .notes .card-row .note-card{
+    background: #FFFFFF;
+    padding: 24px;
+    border-radius: 8px;
+    width: 21%;
+    max-width: 1600px;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
+}
+.note-card h3{
+  margin: 12px 0;
+  font-size: 18px;
+}
+
+.note-card p{
+  color: #6b7280;
+  font-size: 14px;
+  line-height: 1.6;
+}
+ .notes .card-row .note-card .icon{
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-bottom: 21px;
+    font-size: 24px;
+    color: #FFFFFF;
+ }
+.note-card .vector{ background: #F95555;}
+.note-card .bookmark{background: #F95555;}
+.note-card .brain{background: #F95555;}
+.note-card .info{background: #F95555;}
